# VIfA-Launcher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vifa_launcher/: __init__.py  main.py  settings_ui.py  wallpaper_sync.py
src/vifa_launcher/config/: io.py  model.py
src/vifa_launcher/transitions/: __init__.py  base.py  registry.py
src/vifa_launcher/transitions/plugins/: __init__.py  blurstorm.py  curtain.py  fade.py  flip.py  fracture.py  gate.py  glitch.py  montetrick.py  morph.py  mosaic.py  phoenix.py  pulse.py  radial.py  refocus.py  scanline.py  shutters.py  slide.py  slide_down.py  slide_up.py  squeeze.py  utils.py  wipe.py
src/vifa_launcher/utils/: plasma.py
src/vifa_launcher/wallpapers/: cinnamon.py  common.py  detect.py  gnome.py  kde.py  kde_detector.py  lxde.py  mate.py  xfce.py
